# oxc

./: Cargo.toml
apps/oxlint/src/: lib.rs  lint.rs  main.rs  walk.rs
apps/oxlint/src/command/: lint.rs  mod.rs
crates/oxc_allocator/src/: pool_fixed_size.rs
crates/oxc_ast/src/ast/: js.rs
crates/oxc_ast_macros/src/: ast.rs  lib.rs
crates/oxc_linter/src/: external_linter.rs  lib.rs  rules.rs
crates/oxc_linter/src/config/: config_builder.rs
crates/oxc_linter/src/rules/typescript/: explicit_module_boundary_types.rs
crates/oxc_linter/src/service/: mod.rs  runtime.rs
crates/oxc_linter/src/snapshots/: typescript_explicit_module_boundary_types.snap
crates/oxc_macros/src/: declare_all_lint_rules.rs  lib.rs
crates/oxc_span/src/: span.rs
learn_demo/: CONFIG_BUILDER_ANALYSIS.md  Cargo.toml  DECLARE_ALL_LINT_RULES_ANALYSIS.md  DEMO_INDEX.md  MACRO_DEMO_README.md  QUICK_REFERENCE.md  README.md  RUNTIME_ANALYSIS.md  rust_patterns_demo.rs  simple_demo.rs
learn_demo/docs/: .gitignore  README.md  START_HERE.md  oxlint_启动流程分析.md  oxlint_逻辑流程图.md  std_library_analysis.md  单个文件的完整处理流程.md  学习路径.md  文档结构说明.md
learn_demo/docs/allocator_深入学习/: README.md  oxc_allocator_学习总结.md  oxc_allocator设计分析与Rust知识点.md  从oxc_allocator学习Rust高级概念.md  第一周学习计划-allocator入门.md
learn_demo/docs/第一周/: Day1-2_Parser基础.md  Day3-4_Linter基础.md  Day5-7_深入oxc_ast与Rust进阶.md  README.md  Rust知识点速查表.md  快速开始.md
learn_demo/macro_example/: Cargo.toml
learn_demo/macro_example/src/: lib.rs
learn_demo/src/: 01_allocator_basics.rs  01_parser_basics.rs  02_performance_comparison.rs  03_arena_data_structures.rs  04_memory_management.rs  05_ast_deep_dive.rs  05_ast_simulation.rs  06_advanced_features.rs  skeleton_01_parser_basics.rs
learn_demo/src/examples/: Cargo.toml  README.md  oxc_allocator_design_analysis.rs  run_all_examples.sh  rust_concepts_01_lifetimes.rs  rust_concepts_02_unsafe.rs
learn_docs/: 学习路径.md
posts/: README.md  oxc-architecture.md  oxc-crates-overview.md  oxc-linter-analysis.md  oxc-linter.md
