[package]
name = "learn_demo"
version = "0.1.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description.workspace = true

[lints]
workspace = true

# ============================================================================
# 第一周：工具链使用
# ============================================================================

[[bin]]
name = "01_parser_basics"
path = "src/01_parser_basics.rs"

# 待创建的示例
# [[bin]]
# name = "02_linter_basics"
# path = "src/02_linter_basics.rs"

# [[bin]]
# name = "03_formatter_basics"
# path = "src/03_formatter_basics.rs"

# [[bin]]
# name = "04_transformer_basics"
# path = "src/04_transformer_basics.rs"

[[bin]]
name = "05_ast_deep_dive"
path = "src/05_ast_deep_dive.rs"

# ============================================================================
# 额外示例：Allocator 相关（可选，对应第三周方向 D）
# ============================================================================

[[bin]]
name = "allocator_01_basics"
path = "src/01_allocator_basics.rs"

[[bin]]
name = "allocator_02_performance"
path = "src/02_performance_comparison.rs"

[[bin]]
name = "allocator_03_data_structures"
path = "src/03_arena_data_structures.rs"

[[bin]]
name = "allocator_04_memory_management"
path = "src/04_memory_management.rs"

[[bin]]
name = "allocator_05_ast_simulation"
path = "src/05_ast_simulation.rs"

[[bin]]
name = "allocator_06_advanced"
path = "src/06_advanced_features.rs"

# ============================================================================
# 依赖
# ============================================================================

[dependencies]
# Oxc 核心 crates
oxc_allocator = { path = "../crates/oxc_allocator" }
oxc_ast = { path = "../crates/oxc_ast" }
oxc_ast_visit = { path = "../crates/oxc_ast_visit" }
oxc_parser = { path = "../crates/oxc_parser" }
oxc_span = { path = "../crates/oxc_span" }
oxc_syntax = { path = "../crates/oxc_syntax" }
